# CRUD-anchor-v2

./: Anchor.toml
app/: package.json
app/src/: App.js  idl.json
programs/CRUD-anchor-v2/: Cargo.toml
programs/CRUD-anchor-v2/src/: lib.rs
tests/: CRUD-anchor-v2.ts
